// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applying options when changing a visible to 'false' at runtime Toolbar should be hidden 1`] = `
<div>
  
</div>
`;

exports[`Applying options when changing a visible to 'true' at runtime Toolbar should be visible 1`] = `
<div>
  <div
    class="dx-toolbar dx-widget dx-visibility-change-handler dx-collection dx-toolbar-mini"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      />
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`Applying options when disabled = 'false' Toolbar should not be disabled 1`] = `
<div>
  <div
    class="dx-toolbar dx-widget dx-visibility-change-handler dx-collection dx-toolbar-mini"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      />
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`Applying options when disabled = 'true' Toolbar should be disabled 1`] = `
<div>
  <div
    aria-disabled="true"
    class="dx-toolbar dx-widget dx-state-disabled dx-visibility-change-handler dx-collection dx-toolbar-mini"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      />
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`Applying options when visible = 'false' Toolbar should be hidden 1`] = `
<div>
  
</div>
`;

exports[`Applying options when visible = 'true' Toolbar should be visible 1`] = `
<div>
  <div
    class="dx-toolbar dx-widget dx-visibility-change-handler dx-collection dx-toolbar-mini"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      />
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`Applying options when visible = 'undefined' and there are items Toolbar should be visible 1`] = `
<div>
  <div
    class="dx-toolbar dx-widget dx-visibility-change-handler dx-collection"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      >
        <div
          class="dx-item dx-toolbar-item dx-toolbar-button"
        >
          <div
            class="dx-item-content dx-toolbar-item-content"
          >
            <div
              aria-label="button1"
              class="dx-widget dx-button dx-button-mode-contained dx-button-normal dx-button-has-text"
              role="button"
              tabindex="0"
            >
              <div
                class="dx-button-content"
              >
                <span
                  class="dx-button-text"
                >
                  button1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      >
        <div
          class="dx-item dx-toolbar-item dx-toolbar-button"
        >
          <div
            class="dx-item-content dx-toolbar-item-content"
          >
            <div
              aria-label="button2"
              class="dx-widget dx-button dx-button-mode-contained dx-button-normal dx-button-has-text"
              role="button"
              tabindex="0"
            >
              <div
                class="dx-button-content"
              >
                <span
                  class="dx-button-text"
                >
                  button2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applying options when visible = 'undefined' and there are no items Toolbar should be hidden 1`] = `
<div>
  
</div>
`;

exports[`render Toolbar with options 1`] = `
<div>
  <div
    class="dx-toolbar dx-widget dx-visibility-change-handler dx-collection"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      >
        <div
          class="dx-item dx-toolbar-item dx-toolbar-button"
        >
          <div
            class="dx-item-content dx-toolbar-item-content"
          >
            <div
              aria-label="button1"
              class="dx-widget dx-button dx-button-mode-contained dx-button-normal dx-button-has-text"
              role="button"
              tabindex="0"
            >
              <div
                class="dx-button-content"
              >
                <span
                  class="dx-button-text"
                >
                  button1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      >
        <div
          class="dx-item dx-toolbar-item dx-toolbar-button"
        >
          <div
            class="dx-item-content dx-toolbar-item-content"
          >
            <div
              aria-label="button2"
              class="dx-widget dx-button dx-button-mode-contained dx-button-normal dx-button-has-text"
              role="button"
              tabindex="0"
            >
              <div
                class="dx-button-content"
              >
                <span
                  class="dx-button-text"
                >
                  button2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render empty toolbar 1`] = `
<div>
  <div
    class="dx-toolbar dx-widget dx-visibility-change-handler dx-collection dx-toolbar-mini"
    role="toolbar"
  >
    <div
      class="dx-toolbar-items-container"
    >
      <div
        class="dx-toolbar-before"
        role="presentation"
      />
      <div
        class="dx-toolbar-center"
        role="presentation"
      />
      <div
        class="dx-toolbar-after"
        role="presentation"
      />
    </div>
  </div>
</div>
`;
